<resources>
    <string name="app_name">Reddit</string>

    <string name="auth_canceled">Authentication failed</string>
    <string name="log_text">Find like-minded people with Reddit</string>
    <string name="corrupt_access_token">Corrupt access token</string>
    <string name="subreddits">Subreddits</string>
    <string name="favorite">Favorite</string>
    <string name="user">User</string>
    <string name="info">info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_picture">Welcome picture</string>
    <string name="welcome_to_humblrrr">Welcome to Reddit</string>
    <string name="here_are_communities_of_all_kinds_of_interests">Here are communities of all kinds of interests</string>
    <string name="subhumblrrr_picture">Subreddit picture</string>
    <string name="subhumblrrr">SubReddit</string>
    <string name="you_can_find_new_subs_by_interests_and_see_the_subs_you_are_subscribed_to">You can find new subs by interests and see the subs you are subscribed to</string>
    <string name="favorites_tab_stores_bookmarks">Favorites tab stores bookmarks with comments and subs. In your profile you will find information about yourself.</string>
    <string name="share_and_save">Share and save</string>
    <string name="share_and_save_picture">Share and save picture</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="new_button">New</string>
    <string name="popular_button">Popular</string>
    <string name="vote_up">Vote Up</string>
    <string name="vote_down">Vote Down</string>
    <string name="open_comments">Open comments</string>
    <string name="share">Share</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="subscribe">Subscribe</string>
    <string name="subreddits_favorite">Subreddits</string>
    <string name="comments">Comments</string>
    <string name="posts">Posts</string>
    <string name="karma">Karma:</string>
    <string name="created">Created:</string>
    <string name="be_friends">Be friends</string>
    <string name="don_t_be_friends">Don\'t be friends</string>
    <string name="reddit_s_image">Reddit\'s image</string>
    <string name="subreddit_logo">Subreddit logo</string>
    <string name="subreddit_background_picture">Subreddit background picture</string>
    <string name="subscribe_unsubscribe_the_reddit_button">Subscribe-unsubscribe the reddit button</string>
    <string name="comments_to_the_post">Comments to the post:</string>
    <string name="user_avatar">User avatar</string>
    <string name="comments_label">Comments:</string>
    <string name="karma_label">Karma:</string>
    <string name="vote">"Vote "</string>
</resources>