<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.UserInfoFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp">


            <ImageView
                android:id="@+id/imageViewUserInfoAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/reddit_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewUserInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imageViewUserInfoAvatar"
                app:layout_constraintTop_toTopOf="@+id/imageViewUserInfoAvatar"
                tools:text="StepMumSanta" />

            <TextView
                android:id="@+id/textViewUserInfoKarmaLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/karma"
                app:layout_constraintBottom_toTopOf="@+id/textViewUserInfoCreatedLabel"
                app:layout_constraintStart_toStartOf="@+id/textViewUserInfoName"
                app:layout_constraintTop_toBottomOf="@+id/textViewUserInfoName" />

            <TextView
                android:id="@+id/textViewUserInfoKarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textViewUserInfoKarmaLabel"
                app:layout_constraintStart_toEndOf="@+id/textViewUserInfoKarmaLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewUserInfoKarmaLabel"
                tools:text="358847" />

            <TextView
                android:id="@+id/textViewUserInfoCreatedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created"
                app:layout_constraintBottom_toBottomOf="@+id/imageViewUserInfoAvatar"
                app:layout_constraintStart_toStartOf="@+id/textViewUserInfoKarmaLabel" />

            <TextView
                android:id="@+id/textViewUserInfoCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@+id/textViewUserInfoCreatedLabel"
                app:layout_constraintStart_toEndOf="@+id/textViewUserInfoCreatedLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewUserInfoCreatedLabel"
                tools:text="23/05/2023 19:21" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonBeFriends"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="start"
        android:text="@string/be_friends"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>